--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ flask==1.1.2
 itsdangerous==1.1.0
 jinja2==2.11.1
 markupsafe==1.1.1
-pillow==7.1.1
+# pillow==7.1.1 # I needed to change to a higher version because of python3.9 isn't supported by pillow 7.1.1
+pillow==8.4
 python-dotenv==0.12.0
 sqlalchemy==1.3.15
 werkzeug==1.0.1
